--- a/aula01/visao/formulario.html
+++ b/aula01/visao/formulario.html
@@ -19,7 +19,7 @@
                     
                     <form class="mt-5" id="form">
                         <div class="form-group">
-                            <input type="text" name="nome" id="nome" class="form-control" placeholder="Digite seu nome:">
+                            <input type="text" name="NOME" id="NOME" class="form-control" placeholder="Digite seu nome:">
                         </div>
                         <div class="form-group">
                             <label>Selecione seu animal preferido</label>
@@ -42,13 +42,16 @@
                 </div>
             </div>
         </div>
+
+        <div id="retorno" class="row justify-content-center"></div>
+    
     </div>
 
    
 
 
-    <script src="../../js/jquery-3.6.0.min.js"></script>
-    <script src="../../css/bootstrap.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="../../js/bootstrap.js"></script>
     <script src="../controle/function.js"></script>
 </body>
 </html>
